        - Removed deprecated doc->url helper. (diewald)
        - Correctly propagate warnings in frontend calls. (diewald)
        - Remove corpusQuery from statistics
          (as per Kudstvakt #758). (diewald)
        - Improve test suite for slim images. (diewald)
        - Add pages to references in snippet view. (diewald)
        - Added category to Piwik calls. (diewald)

0.54 2024-06-10
        - Remove deprecated 'matchInfo' API path. (diewald, margaretha)
        - Improve footer responsiveness. (diewald)

        WARNING: This change requires at least Kustvakt v0.61.6.

0.53 2024-05-04
        - Add openapi url to documentation. (hebasta)
        - Solve a potential timing issue in VC rendering. (diewald)
        - Update DeReKo link in corpus specific localization. (hebasta)
        - News and announcements are now displayed in Safari (fixes #208).
          (hebasta) 
        - Translate example query documentation. (diewald)
        - Fix: The content of blockquote is displayed. (hebasta) 
        - Upgrade dependency and remove deprecated
          method. (diewald)
        - Add configuration option for defaults: items_per_page, context.
          (diewald)
        - Support for inline-markers in snippets. (see Krill #132; diewald)
        - Added CQP tutorial (part 1; irimia, hebasta, margaretha, diewald)

0.52 2023-11-29
        - Update Piwik dependency to point to matomo.js. (diewald)
        - Add addon to title and description. (diewald)
        - Improve Dockerfile to enable docker-slim. (diewald)
        - Introduce maintenance tag helper. (diewald)
        - Fix: Remembers the last position in the tutorial. (hebasta)

0.51 2023-09-27
        - Support defined log file in configuration. (diewald)
        - Remove experimental_client_registration setting
          and make client registration mandatory in OAuth
          (diewald)
        - Introduce 'reserved terms' in documentation (diewald)
        - Support CQP in frontend (diewald)